deploy/minikube/app-static.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsportal-api-static
  labels:
    type: static
    service: newsportal-api-static
spec:
  replicas: 2
  selector:
    matchLabels:
      type: static
      service: newsportal-api-static
  minReadySeconds: 5
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        type: static
        service: newsportal-api-static
    spec:
      containers:
      - name: static
        image: tanvir/newsportal-static
        imagePullPolicy: Never
        ports:
          - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /
            port: 80

---

apiVersion: v1
kind: Service
metadata:
  name: newsportal-api-static
spec:
  type: NodePort
  selector:
    type: static
    service: newsportal-api-static
  ports:
    - port: 80
