deploy/minikube/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsportal-app
  labels:
    type: app
    service: newsportal-app
    language: js
spec:
  replicas: 2
  selector:
    matchLabels:
      type: app
      service: newsportal-app
      language: js
  minReadySeconds: 5
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        type: app
        service: newsportal-app
        language: js
    spec:
      containers:
        - name: app
          image: tanvir/newsportal-frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /
              port: 80

---

apiVersion: v1
kind: Service
metadata:
  name: newsportal-app
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    type: app
    service: newsportal-app
    language: js
